<resources>
    <string name="app_name">Calculator3000</string>
    <string name="calculator_title">Calculator 3000</string>
    <string name="uno_btn">1</string>
    <string name="dos_btn">2</string>
    <string name="tres_btn">3</string>
    <string name="cuatro_btn">4</string>
    <string name="cinco_btn">5</string>
    <string name="seis_btn">6</string>
    <string name="siete_btn">7</string>
    <string name="ocho_btn">8</string>
    <string name="nueve_btn">9</string>
    <string name="cero_btn">0</string>
    <string name="igual_btn">=</string>
    <string name="mas_btn">+</string>
    <string name="menos_btn">-</string>
    <string name="por_btn">x</string>
    <string name="dividir_btn">/</string>
    <string name="punto_btn">.</string>
    <string name="borrar_btn">DEL</string>
    <string name="resultado_hint" />
    <string name="resultado" />
    <string name="operaciones" />
    <string name="Resta">-</string>
    <string name="atras">Back</string>

</resources>